--- a/index.html
+++ b/index.html
@@ -160,20 +160,49 @@
 				</section>
 
 			<!-- Five -->
-				<section id="five" class="wrapper style2 special fade">
-					<div class="container">
-						<header>
-							<h2>Stay Connected With Us</h2>
-							<p>Sign up to get presale updates, project news, and exclusive offers.</p>
-						</header>
-						<form method="post" action="#" class="cta">
-							<div class="row gtr-uniform gtr-50">
-								<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" /></div>
-							</div>
-						</form>
-					</div>
-				</section>
+			<section id="five" class="wrapper style2 special fade"> 
+  <div class="container">
+    <header>
+      <h2>Stay Connected With Us</h2>
+      <p>Sign up to get presale updates, project news, and exclusive offers.</p>
+    </header>
+
+    <form id="emailForm" class="cta">
+      <div class="row gtr-uniform gtr-50">
+        <div class="col-8 col-12-xsmall">
+          <input type="email" name="email" id="email" placeholder="Your Email Address" required />
+        </div>
+        <div class="col-4 col-12-xsmall">
+          <input type="submit" value="Get Started" class="fit primary" />
+        </div>
+      </div>
+    </form>
+
+    <p id="responseMessage"></p>
+  </div>
+</section>
+
+<script>
+  const scriptURL = https://script.google.com/macros/s/AKfycbxBN9N3XxDzQcyqTIZMvPh9sh71n3xUEhmhOZId7-u6-U-C4tqA-6QZIWbs8mzz-6Sa/exec; // paste URL here
+
+  document.getElementById("emailForm").addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    const email = document.getElementById("email").value;
+
+    fetch(scriptURL, {
+      method: "POST",
+      body: JSON.stringify({ email: email }),
+    })
+    .then(response => {
+      document.getElementById("responseMessage").innerText = "✅ Thank you! You're signed up.";
+      document.getElementById("email").value = "";
+    })
+    .catch(error => {
+      document.getElementById("responseMessage").innerText = "❌ Something went wrong. Try again.";
+    });
+  });
+</script>
 
 			<!-- Footer -->
 				<footer id="footer">
@@ -201,4 +230,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
