--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 </section>
 
 <script>
-  const scriptURL = https://script.google.com/macros/s/AKfycbxBN9N3XxDzQcyqTIZMvPh9sh71n3xUEhmhOZId7-u6-U-C4tqA-6QZIWbs8mzz-6Sa/exec; // paste URL here
+  const scriptURL = "https://script.google.com/macros/s/AKfycbxBN9N3XxDzQcyqTIZMvPh9sh71n3xUEhmhOZId7-u6-U-C4tqA-6QZIWbs8mzz-6Sa/exec"; // paste URL here
 
   document.getElementById("emailForm").addEventListener("submit", function(e) {
     e.preventDefault();
@@ -232,3 +232,4 @@
 	</body>
 
 </html>
+
