--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 
     fetch(scriptURL, {
       method: "POST",
+		mode: "no-cors",
       body: JSON.stringify({ email: email }),
     })
     .then(response => {
@@ -232,4 +233,5 @@
 	</body>
 
 </html>
+
 
