--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 
     fetch(scriptURL, {
       method: "POST",
+	mode: "no-cors",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ email: email }),
     })
@@ -237,6 +238,7 @@
 	</body>
 
 </html>
+
 
 
 
