--- a/index.html
+++ b/index.html
@@ -160,27 +160,40 @@
 				</section>
 
 			<!-- Five -->
-			<section id="five" class="wrapper style2 special fade"> 
+<!-- Five -->
+<section id="five" class="wrapper style2 special fade">
   <div class="container">
     <header>
       <h2>Stay Connected With Us</h2>
-      <p>Sign up to get presale updates, project news, and exclusive offers.</p>
+      <p>Sign up to get presale updates, share feedback, and join our journey.</p>
     </header>
-
-    <form id="emailForm" class="cta">
+    <form method="post" action="#" class="cta">
       <div class="row gtr-uniform gtr-50">
-        <div class="col-8 col-12-xsmall">
+        <!-- Name -->
+        <div class="col-6 col-12-xsmall">
+          <input type="text" name="name" id="name" placeholder="Your Name" required />
+        </div>
+        <!-- Wallet Address -->
+        <div class="col-6 col-12-xsmall">
+          <input type="text" name="wallet" id="wallet" placeholder="Your Wallet Address" required />
+        </div>
+        <!-- Email -->
+        <div class="col-12">
           <input type="email" name="email" id="email" placeholder="Your Email Address" required />
         </div>
-        <div class="col-4 col-12-xsmall">
+        <!-- Comment / Feedback -->
+        <div class="col-12">
+          <textarea name="message" id="message" rows="4" placeholder="Your Comment or Feedback"></textarea>
+        </div>
+        <!-- Submit -->
+        <div class="col-12">
           <input type="submit" value="Get Started" class="fit primary" />
         </div>
       </div>
     </form>
-
-    <p id="responseMessage"></p>
   </div>
 </section>
+
 
 <script>
   const scriptURL = "https://script.google.com/macros/s/AKfycbxBN9N3XxDzQcyqTIZMvPh9sh71n3xUEhmhOZId7-u6-U-C4tqA-6QZIWbs8mzz-6Sa/exec";
@@ -237,6 +250,7 @@
 	</body>
 
 </html>
+
 
 
 
