--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <h2>Stay Connected With Us</h2>
       <p>Sign up to get presale updates, share feedback, and join our journey.</p>
     </header>
-    <form method="post" action="#" class="cta">
+    <form id="emailForm" name="submit-to-google-sheet" method="post" action="#" class="cta">
       <div class="row gtr-uniform gtr-50">
         <!-- Name -->
         <div class="col-6 col-12-xsmall">
@@ -201,12 +201,16 @@
   document.getElementById("emailForm").addEventListener("submit", function(e) {
     e.preventDefault();
 
-    const email = document.getElementById("email").value;
+    const data = {
+      name: document.getElementById("name").value,
+      wallet: document.getElementById("wallet").value,
+      email: document.getElementById("email").value,
+      message: document.getElementById("message").value,
+    };
 
     fetch(scriptURL, {
       method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ email: email }),
+      body: JSON.stringify(data),
     })
     .then(response => response.text())
     .then(text => {
@@ -250,6 +254,7 @@
 	</body>
 
 </html>
+
 
 
 
