--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <h2>Stay Connected With Us</h2>
       <p>Sign up to get presale updates, share feedback, and join our journey.</p>
     </header>
-    <form id="emailForm" name="submit-to-google-sheet" method="post" action="#" class="cta">
+    <form id="emailForm" name="submit-to-google-sheet" class="cta">
       <div class="row gtr-uniform gtr-50">
         <!-- Name -->
         <div class="col-6 col-12-xsmall">
@@ -252,6 +252,7 @@
 	</body>
 
 </html>
+
 
 
 
