--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li><a href="#three">Tokenomics</a></li>
       <li><a href="#four">Ownership NFTs</a></li>
       <li><a href="#five">Presale</a></li>
-      <li><a href="assets/pdf/MST_Whitepaper.pdf" class="button primary" download>Join Us</a></li>
+      <li><a href="assets/MST_Whitepaper.pdf" class="button primary" download>Join Us</a></li>
     </ul>
   </nav>
 </header>
@@ -252,6 +252,7 @@
 	</body>
 
 </html>
+
 
 
 
