--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!--
       <li><a href="#one">About</a></li>
       -->
-		<li></li><a href="javascript:void(0);" class="button primary" id="homeButton">Home</a></li>
+		<li><a href="javascript:void(0);" class="button primary" id="homeButton">Home</a></li>
 
 		<li><a href="#two">Vision</a></li>
       <li><a href="#three">Tokenomics</a></li>
@@ -321,6 +321,7 @@
 	</body>
 
 </html>
+
 
 
 
