--- a/index.html
+++ b/index.html
@@ -307,39 +307,44 @@
     });
   });
 
-	  // Get modal and button
-  var modal = document.getElementById("donationModal");
-  var homeButton = document.getElementById("homeButton");
-  var span = document.getElementsByClassName("close")[0];
+    // Get modal and button
+    var modal = document.getElementById("donationModal");
+    var homeButton = document.getElementById("homeButton");
+    var span = document.getElementsByClassName("close")[0];
 
-  // When the user clicks the "Home" button, open the modal
-  homeButton.onclick = function() {
-    modal.style.display = "block";
-  }
-
-  // When the user clicks on <span> (x), close the modal
-  span.onclick = function() {
-    modal.style.display = "none";
-  }
-
-  // When the user clicks anywhere outside of the modal, close it
-  window.onclick = function(event) {
-    if (event.target == modal) {
-      modal.style.display = "none";
+    // When the user clicks the "Home" button, open the modal
+    homeButton.onclick = function() {
+      modal.style.display = "block";  // This makes the modal visible when the Home button is clicked
     }
-  }
 
-  // Handle form submission (simple demo, no actual submission)
-  document.getElementById("donationForm").onsubmit = function(event) {
-    event.preventDefault(); // Prevent form from refreshing the page
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";  // This will close the modal when the close button is clicked
+    }
 
-    var wallet = document.getElementById("wallet").value;
-    var amount = document.getElementById("amount").value;
-    var method = document.querySelector('input[name="method"]:checked').value;
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";  // Close modal if clicked outside
+      }
+    }
 
-    alert("Thank you for your donation of " + amount + " " + method + " to the wallet address " + wallet);
-    modal.style.display = "none";  // Close modal after submission
-  }
+    // Automatically open the modal when the page loads
+    window.onload = function() {
+      modal.style.display = "block";  // Open the modal when the page is loaded
+    }
+
+    // Handle form submission (simple demo, no actual submission)
+    document.getElementById("donationForm").onsubmit = function(event) {
+      event.preventDefault(); // Prevent form from refreshing the page
+
+      var wallet = document.getElementById("wallet").value;
+      var amount = document.getElementById("amount").value;
+      var method = document.querySelector('input[name="method"]:checked').value;
+
+      alert("Thank you for your donation of " + amount + " " + method + " to the wallet address " + wallet);
+      modal.style.display = "none";  // Close modal after submission
+    }
 </script>
 
 
@@ -373,6 +378,7 @@
 	</body>
 
 </html>
+
 
 
 
