--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     .modal {
       display: none; 
       position: fixed; 
-      z-index: 1; 
+      z-index: 9999; 
       left: 0;
       top: 0;
       width: 100%;
@@ -27,7 +27,7 @@
     }
 
     .modal-content {
-      background-color: #fefefe;
+      background-color: rgba(0, 0, 0, 0.4)
       margin: 5% auto;
       padding: 20px;
       border: 1px solid #888;
@@ -378,6 +378,7 @@
 	</body>
 
 </html>
+
 
 
 
