--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
       width: 100%;
       height: 100%;
       overflow: auto;
-      background-color: rgba(0, 0, 0, 0.4); 
+      background-color: rgba(0, 0, 0, 0.6); 
       padding-top: 60px;
     }
 
     .modal-content {
-      background-color: rgba(0, 0, 0, 0.4)
+		background-color: #ffffff; /* White background for modal content */
+  color: #333333; /* Dark text for contrast */
+    
       margin: 5% auto;
       padding: 20px;
       border: 1px solid #888;
@@ -378,6 +380,7 @@
 	</body>
 
 </html>
+
 
 
 
