--- a/index.html
+++ b/index.html
@@ -191,6 +191,56 @@
   </div>
 </section>
 
+			<!-- six -->
+<!-- six -->
+			
+<section id="donation-section" class="wrapper style1 special fade-up">
+    <div class="container">
+        <header class="major">
+            <h2>Support Our Vision</h2>
+            <p>Your support helps us continue to work towards our vision of creating a positive impact in the world. Every donation, big or small, makes a difference. Thank you for your generosity!</p>
+        </header>
+
+        <div class="row gtr-uniform">
+            <div class="col-4 col-12-xsmall">
+                <div class="box">
+                    <h3>Bitcoin (BTC)</h3>
+                    <p>Send your donation to our Bitcoin wallet address:</p>
+                    <input type="text" value="1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa" id="btc-address" class="fit" readonly>
+                    <button class="button primary small" onclick="copyToClipboard('btc-address')">Copy</button>
+                    <div class="qr-code">
+                        <img src="https://api.qrserver.com/v1/create-qr-code/?data=bitcoin:1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa&size=150x150" alt="Bitcoin QR Code">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4 col-12-xsmall">
+                <div class="box">
+                    <h3>USDT (Tether)</h3>
+                    <p>Send your donation to our USDT wallet address:</p>
+                    <input type="text" value="0xB0F94C6a4c4A2D1b96C0a1e93a69a5D9c3A56b5A" id="usdt-address" class="fit" readonly>
+                    <button class="button primary small" onclick="copyToClipboard('usdt-address')">Copy</button>
+                    <div class="qr-code">
+                        <img src="https://api.qrserver.com/v1/create-qr-code/?data=ethereum:0xB0F94C6a4c4A2D1b96C0a1e93a69a5D9c3A56b5A&size=150x150" alt="USDT QR Code">
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4 col-12-xsmall">
+                <div class="box">
+                    <h3>TRX (Tron)</h3>
+                    <p>Send your donation to our TRX wallet address:</p>
+                    <input type="text" value="TX4v1yXgK1mQzSXYT5rV82yXjKGR6g2U5v" id="trx-address" class="fit" readonly>
+                    <button class="button primary small" onclick="copyToClipboard('trx-address')">Copy</button>
+                    <div class="qr-code">
+                        <img src="https://api.qrserver.com/v1/create-qr-code/?data=TRX:TX4v1yXgK1mQzSXYT5rV82yXjKGR6g2U5v&size=150x150" alt="TRX QR Code">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <script>
   const scriptURL = "https://script.google.com/macros/s/AKfycbxBN9N3XxDzQcyqTIZMvPh9sh71n3xUEhmhOZId7-u6-U-C4tqA-6QZIWbs8mzz-6Sa/exec"; // your Apps Script Web App URL
@@ -249,6 +299,7 @@
 	</body>
 
 </html>
+
 
 
 
