--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <input type="text" value="0xf370206112ce6940a1a52e22eea4d13be25ed348" id="usdt-address" class="fit" readonly>
                     <button class="button primary small" onclick="copyToClipboard('usdt-address')">Copy</button>
                     <div class="qr-code">
-                        <img src="https://api.qrserver.com/v1/create-qr-code/?data=ethereum:0xf370206112ce6940a1a52e22eea4d13be25ed348&size=150x150" alt="USDT QR Code">
+                        <img src="images/pic011.jpg":0xf370206112ce6940a1a52e22eea4d13be25ed348&size=150x150" alt="USDT QR Code">
                     </div>
                 </div>
             </div>
@@ -301,6 +301,7 @@
 	</body>
 
 </html>
+
 
 
 
