--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <input type="text" value="bc1qmvgz60xdhvlad60heswwl3mmq2ecrpjunugpqc" id="btc-address" class="fit" readonly>
                     <button class="button primary small" onclick="copyToClipboard('btc-address')">Copy</button>
                     <div class="qr-code">
-                        <img src="https://api.qrserver.com/v1/create-qr-code/?data=bitcoin:bc1qmvgz60xdhvlad60heswwl3mmq2ecrpjunugpqc&size=150x150" alt="Bitcoin QR Code">
+                        <img src="images/BTC_qr_bc1qmvgz60xdhvlad60heswwl3mmq2ecrpjunugpqc.png" alt="BTC QR Code" width="150" height="150">
                     </div>
                 </div>
             </div>
@@ -186,7 +186,7 @@
                     <input type="text" value="0xf370206112ce6940a1a52e22eea4d13be25ed348" id="usdt-address" class="fit" readonly>
                     <button class="button primary small" onclick="copyToClipboard('usdt-address')">Copy</button>
                     <div class="qr-code">
-                        <img src="images/pic011.jpg":0xf370206112ce6940a1a52e22eea4d13be25ed348&size=150x150" alt="USDT QR Code">
+                        <img src="images/USDT_qr_0xf370206112ce6940a1A52e22Eea4d13bE25ED348.png" alt="USDT QR Code" width="150" height="150">
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                     <input type="text" value="TNP55W4JPhaAhz8QewE7ym9vGBDSD8CKjP" id="trx-address" class="fit" readonly>
                     <button class="button primary small" onclick="copyToClipboard('trx-address')">Copy</button>
                     <div class="qr-code">
-                        <img src="https://api.qrserver.com/v1/create-qr-code/?data=TRX:TNP55W4JPhaAhz8QewE7ym9vGBDSD8CKjP&size=150x150" alt="TRX QR Code">
+                        <img src="images/RTX_qr_TNP55W4JPhaAhz8QewE7ym9vGBDSD8CKjP,png" alt="TRX QR Code" width="150" height="150">
                     </div>
                 </div>
             </div>
@@ -301,6 +301,7 @@
 	</body>
 
 </html>
+
 
 
 
