--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <input type="text" value="TNP55W4JPhaAhz8QewE7ym9vGBDSD8CKjP" id="trx-address" class="fit" readonly>
                     <button class="button primary small" onclick="copyToClipboard('trx-address')">Copy</button>
                     <div class="qr-code">
-                        <img src="images/RTX_qr_TNP55W4JPhaAhz8QewE7ym9vGBDSD8CKjP,png" alt="TRX QR Code" width="150" height="150">
+                        <img src="images/RTX_qr_TNP55W4JPhaAhz8QewE7ym9vGBDSD8CKjP.png" alt="TRX QR Code" width="150" height="150">
                     </div>
                 </div>
             </div>
@@ -301,6 +301,7 @@
 	</body>
 
 </html>
+
 
 
 
