--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 
     fetch(scriptURL, {
       method: "POST",
+		mode: "no-cors",
 		  headers: {
     "Content-Type": "application/json"   // tell GAS it's JSON
   },
@@ -304,6 +305,7 @@
 	</body>
 
 </html>
+
 
 
 
