--- a/index.html
+++ b/index.html
@@ -279,16 +279,50 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-						<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-			
-				</footer>
+    <ul class="icons">
+        <!-- Twitter -->
+        <li>
+            <a href="https://twitter.com/YourUsername" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-twitter">
+                <span class="label">Twitter</span>
+            </a>
+        </li>
+
+        <!-- Facebook -->
+        <li>
+            <a href="https://www.facebook.com/YourUsername" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-facebook-f">
+                <span class="label">Facebook</span>
+            </a>
+        </li>
+
+        <!-- LinkedIn -->
+        <li>
+            <a href="https://www.linkedin.com/in/YourUsername" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-linkedin-in">
+                <span class="label">LinkedIn</span>
+            </a>
+        </li>
+
+        <!-- Instagram -->
+        <li>
+            <a href="https://www.instagram.com/YourUsername" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-instagram">
+                <span class="label">Instagram</span>
+            </a>
+        </li>
+
+        <!-- GitHub -->
+        <li>
+            <a href="https://github.com/YourUsername" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-github">
+                <span class="label">GitHub</span>
+            </a>
+        </li>
+
+        <!-- Email -->
+        <li>
+            <a href="mailto:your.email@example.com" class="icon solid alt fa-envelope">
+                <span class="label">Email</span>
+            </a>
+        </li>
+    </ul>
+</footer>
 
 		</div>
 
@@ -305,6 +339,7 @@
 	</body>
 
 </html>
+
 
 
 
