--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 			<link rel="stylesheet" href="assets/css/main.css" />
 			<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+			<base href="/template01/">
 
 		</head>
 		<body class="is-preload landing">
@@ -713,6 +714,7 @@ Status: Not connected
 		</body>
 
 	</html>
+
 
 
 
