--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
 		  <ul class="actions" style="margin-top:1rem;">
 			<li><a id="btnConnect" class="button">Connect Wallet</a></li>
 			<li><a id="btnInvest" class="button primary">Invest</a></li>
+			 <a id="redirectToInvest" class="button" href="/invest">redirect</a>
+			  
 		  </ul>
 		  </ul>
 
@@ -714,6 +716,7 @@ Status: Not connected
 		</body>
 
 	</html>
+
 
 
 
