--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 		  <ul class="actions" style="margin-top:1rem;">
 			<li><a id="btnConnect" class="button">Connect Wallet</a></li>
 			<li><a id="btnInvest" class="button primary">Invest</a></li>
-			 <a id="redirectToInvest" class="button" href="/invest">redirect</a>
+			 <a id="redirectToInvest" class="button" href="/template01/invest">redirect</a>
 			  
 		  </ul>
 		  </ul>
@@ -716,6 +716,7 @@ Status: Not connected
 		</body>
 
 	</html>
+
 
 
 
