--- a/index.html
+++ b/index.html
@@ -124,9 +124,8 @@
 
 		   <!-- Actions -->
 		  <ul class="actions" style="margin-top:1rem;">
-			<li><a id="btnConnect" class="button">Connect Wallet</a></li>
-			<li><a id="btnInvest" class="button primary">Invest</a></li>
-			 <a id="redirectToInvest" class="button" href="/template01/invest">redirect</a>
+
+			 <a id="redirectToInvest" class="button" href="/template01/invest">Join Presale</a>
 			  
 		  </ul>
 		  </ul>
@@ -634,6 +633,7 @@
 		</body>
 
 	</html>
+
 
 
 
